# wdenoise

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: heavysine1024_noisy.txt
examples/: CMakeLists.txt  denoiseexamples.c  ebayesdenoiseexample.c  imdenoiseexample.c  mt19937ar.h  test2d.c  test2d.h  wdenoiseexample.c  wdenoisetest.c
header/: wdenoise.h
src/: CMakeLists.txt  ebayesthresh.c  ebayesthresh.h  wdenmath.c  wdenmath.h  wdenoise.c
unitTests/: CMakeLists.txt  unitTest.c  unitTest.h
